--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Open-source library request manager
+name: Open-source Library Request Manager
 markdown: kramdown
 
 theme: jekyll-theme-minimal
